--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.8.2",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
