--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.5",
+    "react-search-box": "^3.0.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.83.4",
