--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/stripe-js": "^7.0.0",
     "axios": "^1.8.2",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
@@ -37,7 +38,7 @@
     "@eslint/js": "^9.17.0",
     "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",  
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
